--- a/src/style.css
+++ b/src/style.css
@@ -22,11 +22,20 @@ button {
 }
 
 .container {
+  display: flex;
+  flex-direction: column;
   margin: 0 auto;
-  padding-top: 20vh;
-  max-width: 1440px;
+  padding-top: 5vh;
+  max-width: 860px;
   width: 100%;
   height: 100%;
+  gap: 3rem;
+}
+
+.keyboard-value {
+  width: 100%;
+  min-height: 250px;
+  resize: none;
 }
 
 .keyboard {
