--- a/src/style.css
+++ b/src/style.css
@@ -10,7 +10,6 @@ body {
   min-height: 100vh;
   height: 100%;
   font-size: 16px;
-  /*font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;*/
   font-family: 'Inter', sans-serif;
   background-color: grey;
 }
@@ -35,6 +34,7 @@ button {
 .keyboard-value {
   width: 100%;
   min-height: 250px;
+  padding: 10px;
   resize: none;
 }
 
