--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,7 @@ body {
   height: 100%;
   font-size: 16px;
   font-family: 'Inter', sans-serif;
-  background-color: grey;
+  background-color: #181818;
 }
 
 button {
@@ -23,6 +23,7 @@ button {
 .container {
   display: flex;
   flex-direction: column;
+  align-items: center;
   margin: 0 auto;
   padding-top: 5vh;
   max-width: 860px;
@@ -33,9 +34,14 @@ button {
 
 .keyboard-value {
   width: 100%;
-  min-height: 250px;
+  min-height: 350px;
   padding: 10px;
+  border-radius: 5px;
+  background-color: #1e1e1e;
+  color: #ffffff;
   resize: none;
+  outline: none;
+  border: none;
 }
 
 .keyboard {
@@ -45,7 +51,7 @@ button {
   padding: 5px;
   max-width: 860px;
   border-radius: 5px;
-  background-color: #5d4954;
+  background-color: #181818;
 }
 
 .keyboard__key {
@@ -58,21 +64,29 @@ button {
   font-size: 1.1rem;
   font-weight: 500;
   text-align: center;
-  color: #ff144b;
+  color: #00adff;
   cursor: pointer;
-  background-color: #fff5c5;
-  box-shadow: rgba(50, 50, 93, 0.25) 0 50px 100px -20px, rgba(0, 0, 0, 0.3) 0 30px 60px -30px,
-    rgba(10, 37, 64, 0.35) 0 -2px 6px 0 inset;
+  background-color: #0e121e;
+  box-shadow: 0 0 7px;
+  transition: color 0.2s;
+}
+
+.keyboard__key:hover {
+  color: #ff0062;
 }
 
 .keyboard__key:active {
-  background-color: #fff5be;
-  transform: scale(0.97);
+  color: #fff700;
+  transform: scale(0.96);
 }
 
 .keyboard__key_active {
-  background-color: #fff5be;
+  color: #fff700;
   transform: scale(0.97);
+}
+
+.keyboard__key.keyboard__key_enabled.CapsLock {
+  color: #32ff2f;
 }
 
 .keyboard__key.Delete,
@@ -111,6 +125,30 @@ button {
   width: 43.333%;
 }
 
+.description {
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+  width: fit-content;
+  text-align: center;
+  border-radius: 5px;
+  background-color: #1e1e1e;
+}
+
+ul,
+li {
+  list-style: none;
+}
+
+.list-item__title {
+  color: #ffffff;
+}
+
+.text-primary {
+  font-weight: 700;
+  color: hotpink;
+}
+
 /*.keyboard__key.keyboard__key_enabled.CapsLock::after {*/
 /*  content: '';*/
 /*  position: absolute;*/
@@ -123,7 +161,3 @@ button {
 /*  border-radius: 1px;*/
 /*  background-color: greenyellow;*/
 /*}*/
-
-.keyboard__key.keyboard__key_enabled.CapsLock {
-  color: #4095ed;
-}
