--- a/src/style.css
+++ b/src/style.css
@@ -71,22 +71,19 @@ button {
   transition: color 0.2s;
 }
 
-.keyboard__key:hover {
+.keyboard__key.keyboard__key_enabled.CapsLock {
+  color: #32ff2f;
+}
+
+.keyboard__key:not(.keyboard__key_active):hover {
   color: #ff0062;
 }
 
-.keyboard__key:active {
-  color: #fff700;
-  transform: scale(0.96);
-}
-
+.keyboard__key:active,
+.keyboard__key:active:hover,
 .keyboard__key_active {
   color: #fff700;
-  transform: scale(0.97);
-}
-
-.keyboard__key.keyboard__key_enabled.CapsLock {
-  color: #32ff2f;
+  transform: scale(0.96);
 }
 
 .keyboard__key.Delete,
@@ -149,15 +146,14 @@ li {
   color: hotpink;
 }
 
-/*.keyboard__key.keyboard__key_enabled.CapsLock::after {*/
-/*  content: '';*/
-/*  position: absolute;*/
-/*  display: inline-block;*/
-/*  width: 80%;*/
-/*  height: 2px;*/
-/*  top: 80%;*/
-/*  left: 50%;*/
-/*  transform: translate(-50%, -80%);*/
-/*  border-radius: 1px;*/
-/*  background-color: greenyellow;*/
-/*}*/
+.keyboard__key.keyboard__key_enabled.CapsLock::after {
+  content: '';
+  position: absolute;
+  display: block;
+  top: 7px;
+  right: 7px;
+  width: 5px;
+  height: 5px;
+  border-radius: 50%;
+  background-color: #b3ff2f;
+}
